Fix popover overflow, closes #30

--- a/master/assets/css/bootstrap.css
+++ b/master/assets/css/bootstrap.css
@@ -5756,7 +5756,7 @@ button.close {
   left: 0;
   z-index: 1010;
   display: none;
-  max-width: 276px;
+  /*max-width: 276px;*/
   padding: 1px;
   text-align: left;
   white-space: normal;
